force-app/main/default/objects/Device_Command__c/Device_Command__c.object-meta.xml
<CustomObject>
    <label>Device Command</label>
    <pluralLabel>Device Commands</pluralLabel>
    <description>A command queued for a physical device. Custom on purpose: no standard object models an auditable device-command lifecycle (Pending/Sent/Acked/Failed). A Flow on this object publishes the Platform Event the device pipeline consumes.</description>
    <nameField>
        <label>Command Number</label>
        <type>AutoNumber</type>
        <displayFormat>CMD-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>