force-app/main/default/objects/Device_Command__c/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>DISPENSE_MEDICATION</fullName><default>false</default><label>DISPENSE_MEDICATION</label></value>
            <value><fullName>RESTART</fullName><default>false</default><label>RESTART</label></value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>