force-app/main/default/objects/Device_Command__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>